force-app/main/default/objects/SCOC__ElectoralRoll__c/SCOC__ElectoralRoll__c.object-meta.xml
<CustomObject>
    <description>Electoral Roll</description>
    <label>Electoral Roll</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Electoral Roll</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Electoral Roll</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>