force-app/main/default/objects/SCOC__ElectoralRoll__c/fields/SCOC__AnnualRegisterPeriodStartYear__c.field-meta.xml
<CustomField>
    <fullName>SCOC__AnnualRegisterPeriodStartYear__c</fullName>
    <description>Annual Register Period Start Year</description>
    <label>Annual Register Period Start Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>