force-app/main/default/objects/SCOC__ElectoralRoll__c/fields/SCOC__Packet__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Packet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to packet.</description>
    <label>Packet</label>
    <referenceTo>SCOC__Packet__c</referenceTo>
    <relationshipLabel>Electoral Roll</relationshipLabel>
    <relationshipName>ElectoralRoll</relationshipName>
    <type>Lookup</type>
</CustomField>