force-app/main/default/objects/SCOC__ElectoralRoll__c/fields/SCOC__Seniority__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Seniority__c</fullName>
    <description>Seniority</description>
    <label>Seniority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>