force-app/main/default/objects/SCOC__ElectoralRoll__c/fields/SCOC__Type__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Type__c</fullName>
    <description>Type</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>